[gd_scene load_steps=9 format=3 uid="uid://xlxgbhnoi70e"]

[ext_resource type="Texture2D" uid="uid://4vu0e6f1wkdc" path="res://PlayerSprites/sprite_1.png" id="1_u77cw"]
[ext_resource type="Script" path="res://Scripts/Player_Controller.gd" id="2_72gxo"]
[ext_resource type="Texture2D" uid="uid://bavqxy6xxcnum" path="res://PlayerSprites/sprite_2.png" id="2_jtcqu"]
[ext_resource type="Texture2D" uid="uid://bs7i47sk2amfx" path="res://PlayerSprites/sprite_3.png" id="3_kpbgb"]
[ext_resource type="Texture2D" uid="uid://cvwokvf8wujmx" path="res://PlayerSprites/sprite_0.png" id="4_01l14"]
[ext_resource type="AudioStream" uid="uid://cl735vtxvgeig" path="res://Sounds/laser-gun-shot-sound.wav" id="6_xuj8a"]
[ext_resource type="AudioStream" uid="uid://ci5qn2c2yu2fq" path="res://Sounds/158894__primeval_polypod__rocket-launch.wav" id="7_c6cic"]

[sub_resource type="SpriteFrames" id="SpriteFrames_r6r27"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_u77cw")
}, {
"duration": 1.0,
"texture": ExtResource("2_jtcqu")
}, {
"duration": 1.0,
"texture": ExtResource("3_kpbgb")
}],
"loop": true,
"name": &"accelerate",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_01l14")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="Node2D"]
script = ExtResource("2_72gxo")
rotation_speed = 3.142
decceleration = 0.5

[node name="AnimatedPlayerSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r6r27")

[node name="Area2D" type="Area2D" parent="AnimatedPlayerSprite"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AnimatedPlayerSprite/Area2D"]
position = Vector2(-0.044014, -1.35027e-05)
scale = Vector2(1.08796, 1.05769)
polygon = PackedVector2Array(0, -13, 14, 13, 6, 7, -4, 7, -13, 13)
one_way_collision_margin = 0.0

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(0, -15)

[node name="ShotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_xuj8a")

[node name="ThrustSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_c6cic")
volume_db = -4.488

[connection signal="area_entered" from="AnimatedPlayerSprite/Area2D" to="." method="_on_area_2d_area_entered"]
